--- a/package.json
+++ b/package.json
@@ -30,17 +30,28 @@
     "@types/openlayers": "^4.6.17",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.2",
+    "browser-assert": "^1.2.1",
     "chokidar": "^3.5.1",
+    "crypto-browserify": "^3.12.0",
     "dotenv": "^8.2.0",
+    "fs": "^0.0.1-security",
     "google-spreadsheet": "^3.1.15",
     "mapbox-gl": "^1.13.0",
+    "net": "^1.0.2",
     "ol": "^6.5.0",
+    "os-browserify": "^0.3.0",
+    "path-browserify": "^1.0.1",
+    "querystring-es3": "^0.2.1",
     "rbush": "^3.0.1",
     "react": "^17.0.1",
+    "react-app-rewired": "^2.2.1",
     "react-dom": "^17.0.1",
     "react-mapbox-gl": "^5.1.1",
-    "react-scripts": "^4.0.3",
-    "typescript": "^4.2.3"
+    "react-scripts": "^5.0.1",
+    "stream-browserify": "^3.0.0",
+    "tls": "^0.0.1",
+    "typescript": "^4.2.3",
+    "util": "^0.12.5"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -73,7 +84,7 @@
     "@typescript-eslint/parser": "^4.16.1",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^7.21.0",
-    "eslint-config": "^0.3.0",
+    "eslint-config": "^0.2.1",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-airbnb-typescript": "^12.3.1",
     "eslint-config-prettier": "^8.1.0",
